Revert "Disable sxs branch publishing"
This reverts commit 040fbdb6b7ec3bb853a8fb13f8b7d3d7b3e68362.

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -40,7 +40,7 @@
   "branches_to_filter": [
     "master",
     "master-sync-work",
-    "live-sxs"
+    "live"
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/azure-docs.de-de",
   "git_repository_branch_open_to_public_contributors": "master",
