--- a/articles/private-link/index.yml
+++ b/articles/private-link/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: malopMSFT
   ms.author: allensu
   ms.date: 09/16/2019
-  ms.openlocfilehash: c062c0aa38037485e6bd892b3dbce67160f64995
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 3b6123c6878b01673818980f58643272f6fbd2e0
+  ms.sourcegitcommit: 2e123f00b9bbfebe1a3f6e42196f328b50233fc5
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "82127618"
+  ms.lasthandoff: 04/27/2021
+  ms.locfileid: "108073555"
 landingContent:
 - title: Informationen zu Azure Private Link
   linkLists:
@@ -23,6 +23,10 @@ landingContent:
     links:
     - text: Was ist Private Link?
       url: private-link-overview.md
+  - linkListType: video
+    links:
+    - text: Schützen von Azure PaaS-Ressourcen mit Private Link
+      url: https://www.youtube.com/watch?v=AZ0iFcyPDkc
 - title: Herstellen einer Verbindung mit einem Azure-Dienst
   linkLists:
   - linkListType: concept
