--- a/articles/route-server/TOC.yml
+++ b/articles/route-server/TOC.yml
@@ -12,13 +12,21 @@
       href: quickstart-configure-route-server-powershell.md
     - name: "Konfigurieren einer Route\_Server-Instanz – CLI"
       href: quickstart-configure-route-server-cli.md
+    - name: "Konfigurieren einer Route\_Server-Instanz: ARM-Vorlage"
+      href: quickstart-configure-template.md
   expanded: true
+- name: Beispiele
+  items:
+    - name: Resource Manager-Vorlagen
+      href: resource-manager-template-samples.md
 - name: Konzepte
   items:
     - name: Häufig gestellte Fragen zu Route Server
       href: route-server-faq.md
     - name: "Unterstützung von ExpressRoute und Azure\_VPN"
       href: expressroute-vpn-support.md
+    - name: Zweifach vernetztes Netzwerk
+      href: about-dual-homed-network.md
 - name: Anleitungen
   items:
     - name: Beheben von Problemen mit Route Server
@@ -38,7 +46,7 @@
     - name: Netzwerkblog
       href: 'https://azure.microsoft.com/blog/topics/networking/'
     - name: Preise
-      href: 'https://azure.microsoft.com/pricing/details/routeserver/'
+      href: 'https://azure.microsoft.com/pricing/'
     - name: Preisrechner
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Dienstupdates
